# YouTube-Short-Generator

./: .gitignore  Generator.py  LICENSE  README.md  main.py  pyproject.toml  tts.py  youtube_downloader.py
src/youtube_short_generator/: __init__.py  cli.py  short_generator.py  tts.py  youtube_downloader.py
youtube_short_generator/: cli.py
