[project]
name = "youtube-short-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moviepy>=2.2.1",
    "openai-whisper>=20250625",
    "qwen-tts>=0.1.1",
    "rich>=15.0.0",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "typer>=0.25.1",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
youtube-short-generator = "youtube_short_generator.cli:app"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
